# lsyshell

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ZH.md  db.sqlite
config/: README.md
lsyshell/: Cargo.toml
lsyshell/src/: app.rs  db.rs  errors.rs  lib.rs
lsyshell/src/editor/: mod.rs  ui.rs
lsyshell/src/shell/: lsyshell.rs  mod.rs  session.rs  terminal.rs  ui.rs
lsyshell/src/ui/: menubar.rs  mod.rs
lsyshell/src/ui/form/: mod.rs  session.rs
lsyshell/src/ui/tab_view/: mod.rs  session.rs
lsyshell/src/utils/: mod.rs
src/: lib.rs  main.rs
src/editor/: editor.rs
src/shell/: lsyerror.rs  lsyshell.rs  mod.rs  ui.rs
src/utils/: mod.rs
